--- a/AVCam/Main.storyboard
+++ b/AVCam/Main.storyboard
@@ -181,7 +181,7 @@
                                             <constraint firstAttribute="height" constant="21" id="qs8-RK-kgh"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入您的汇付邮箱前缀" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1xE-jR-xhH">
@@ -197,7 +197,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="yYO-1U-BwT"/>
                                         </constraints>
-                                        <state key="normal" title="OK">
+                                        <state key="normal" title="确定">
                                             <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
